@@ -60,6 +60,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Removed unused server options in wolfpack.xml.
   - Added "advance" parameter to char.skillcheck, that allows skillchecks without the possibility of skillgains.
   - Fixed summontime property. If it's 0, the NPC will never disappear.
+  - Fixed having no LoS on floor tiles (that do not block sight) build on black map (dirt e.g.)
  * Definition Changes:
   - Tinker buy some items now
   - Bench (0x1049) which was crafted was "unusable"
